--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rectorative Design</title>
-  <link type="text/css" rel="stylesheet" href="..\css\materialize.min.css"
+  <link type="text/css" rel="stylesheet" href="css\materialize.min.css"
     media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="..\css\style.css" />
+  <link type="text/css" rel="stylesheet" href=css\style.css" />
 </head>
 
 <body id="home" class="scrollspy">
