--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
   <div class="slider">
     <ul class="slides">
       <li>
-        <img src="Rectorative\images/b1.jpg" alt="Rectorative Design">
+        <img src="Rectorative\images\b1.jpg" alt="Rectorative Design">
         <div class="caption left-align">
           <h3> Lorem, ipsum dolor.</h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
         </div>
       </li>
       <li>
-        <img src="Rectorative\images/b2.jpg" alt="Rectorative Design">
+        <img src="Rectorative\images\b2.jpg" alt="Rectorative Design">
         <div class="caption center-align">
           <h3> Lorem, ipsum dolor. </h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
         </div>
       </li>
       <li>
-        <img src="Rectorative\images/b3.jpg" alt="Rectorative Design">
+        <img src="Rectorative\images\b3.jpg" alt="Rectorative Design">
         <div class="caption right-align">
           <h3> Lorem ipsum dolor.</h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
@@ -115,13 +115,13 @@
       <h3 class="center light grey-text text-darken-3"> Our Portfolio</h3>
       <div class="row">
         <div class="col m4 s12">
-          <img src="Rectorative\images/b1.jpg" class="responsive-img materialboxed">
+          <img src="Rectorative\images\b1.jpg" class="responsive-img materialboxed">
         </div>
         <div class="col m4 s12">
-          <img src="Rectorative\images/b2.jpg" class="responsive-img materialboxed">
+          <img src="Rectorative\images\b2.jpg" class="responsive-img materialboxed">
         </div>
         <div class="col m4 s12">
-          <img src="Rectorative\images/b3.jpg" class="responsive-img materialboxed">
+          <img src="Rectorative\images\b3.jpg" class="responsive-img materialboxed">
         </div>
       </div>
     </div>
