--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rectorative Design</title>
-  <link type="text/css" rel="stylesheet" href="Rectorative\css\materialize.min.css"
+  <link type="text/css" rel="stylesheet" href="..\css\materialize.min.css"
     media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="Rectorative\css\style.css" />
+  <link type="text/css" rel="stylesheet" href="..\css\style.css" />
 </head>
 
 <body id="home" class="scrollspy">
@@ -17,7 +17,7 @@
     <nav class="black darken-1">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#home" class="brand-logo ">Logo Rectorative</a>
+          <a href="#home" class="brand-logo ">Logo ..</a>
           <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons"> Menu </i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="#about">About Us</a></li>
@@ -41,21 +41,21 @@
   <div class="slider">
     <ul class="slides">
       <li>
-        <img src="Rectorative\images\b1.jpg" alt="Rectorative Design">
+        <img src="..\images\b1.jpg" alt="Rectorative Design">
         <div class="caption left-align">
           <h3> Lorem, ipsum dolor.</h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
         </div>
       </li>
       <li>
-        <img src="Rectorative\images\b2.jpg" alt="Rectorative Design">
+        <img src="..\images\b2.jpg" alt="Rectorative Design">
         <div class="caption center-align">
           <h3> Lorem, ipsum dolor. </h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
         </div>
       </li>
       <li>
-        <img src="Rectorative\images\b3.jpg" alt="Rectorative Design">
+        <img src="..\images\b3.jpg" alt="Rectorative Design">
         <div class="caption right-align">
           <h3> Lorem ipsum dolor.</h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
@@ -90,7 +90,7 @@
         <h3 class="center light grey-text text-darken-3"> Our Services </h3>
         <div class="col m6 s12">
           <div class="card-panel center">
-            <img src="Rectorative\images\icon1.png">
+            <img src="..\images\icon1.png">
             <h5>Bus Livery</h5>
             <p>Kami mendesain livery bus impian Anda. Dengan sentuhan profesional dan desain yang estetik yang membuat
               bus Anda terlihat menawan ketimbang para perawan.</p>
@@ -98,7 +98,7 @@
         </div>
         <div class="col m6 s12">
           <div class="card-panel center">
-            <img src="Rectorative\images\icon2.png" width="41px" !important>
+            <img src="..\images\icon2.png" width="41px" !important>
             <h5>Body Bus</h5>
             <p>Kami mendesain body bus impian Anda. Dengan sentuhan profesional dan didesain dengan rasa kehati-hatian
               serta penuh tanggung jawab agar body bus Anda kokoh dan terlihat gagah.
@@ -115,13 +115,13 @@
       <h3 class="center light grey-text text-darken-3"> Our Portfolio</h3>
       <div class="row">
         <div class="col m4 s12">
-          <img src="Rectorative\images\b1.jpg" class="responsive-img materialboxed">
+          <img src="..\images\b1.jpg" class="responsive-img materialboxed">
         </div>
         <div class="col m4 s12">
-          <img src="Rectorative\images\b2.jpg" class="responsive-img materialboxed">
+          <img src="..\images\b2.jpg" class="responsive-img materialboxed">
         </div>
         <div class="col m4 s12">
-          <img src="Rectorative\images\b3.jpg" class="responsive-img materialboxed">
+          <img src="..\images\b3.jpg" class="responsive-img materialboxed">
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script type="text/javascript" src="Rectorative\js\materialize.min.js">  </script>
+  <script type="text/javascript" src="..\js\materialize.min.js">  </script>
   <script>
     const sideNav = document.querySelectorAll('.sidenav');
     M.Sidenav.init(sideNav);
