--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
   <div class="slider">
     <ul class="slides">
       <li>
-        <img src="..\images\b1.jpg" alt="Rectorative Design">
+        <img src="images/b1.jpg" alt="Rectorative Design">
         <div class="caption left-align">
           <h3> Lorem, ipsum dolor.</h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
         </div>
       </li>
       <li>
-        <img src="..\images\b2.jpg" alt="Rectorative Design">
+        <img src="images/b2.jpg" alt="Rectorative Design">
         <div class="caption center-align">
           <h3> Lorem, ipsum dolor. </h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
         </div>
       </li>
       <li>
-        <img src="..\images\b3.jpg" alt="Rectorative Design">
+        <img src="images/b3.jpg" alt="Rectorative Design">
         <div class="caption right-align">
           <h3> Lorem ipsum dolor.</h3>
           <h5 class="light grey-text text-lighten-3"> Lorem ipsum dolor sit amet. </h5>
@@ -90,7 +90,7 @@
         <h3 class="center light grey-text text-darken-3"> Our Services </h3>
         <div class="col m6 s12">
           <div class="card-panel center">
-            <img src="..\images\icon1.png">
+            <img src="images/icon1.png">
             <h5>Bus Livery</h5>
             <p>Kami mendesain livery bus impian Anda. Dengan sentuhan profesional dan desain yang estetik yang membuat
               bus Anda terlihat menawan ketimbang para perawan.</p>
@@ -98,7 +98,7 @@
         </div>
         <div class="col m6 s12">
           <div class="card-panel center">
-            <img src="..\images\icon2.png" width="41px" !important>
+            <img src="images/icon2.png" width="41px" !important>
             <h5>Body Bus</h5>
             <p>Kami mendesain body bus impian Anda. Dengan sentuhan profesional dan didesain dengan rasa kehati-hatian
               serta penuh tanggung jawab agar body bus Anda kokoh dan terlihat gagah.
@@ -115,13 +115,13 @@
       <h3 class="center light grey-text text-darken-3"> Our Portfolio</h3>
       <div class="row">
         <div class="col m4 s12">
-          <img src="..\images\b1.jpg" class="responsive-img materialboxed">
+          <img src="images/b1.jpg" class="responsive-img materialboxed">
         </div>
         <div class="col m4 s12">
-          <img src="..\images\b2.jpg" class="responsive-img materialboxed">
+          <img src="images/b2.jpg" class="responsive-img materialboxed">
         </div>
         <div class="col m4 s12">
-          <img src="..\images\b3.jpg" class="responsive-img materialboxed">
+          <img src=images/b3.jpg" class="responsive-img materialboxed">
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script type="text/javascript" src="../js/materialize.min.js">  </script>
+  <script type="text/javascript" src="js/materialize.min.js">  </script>
   <script>
     const sideNav = document.querySelectorAll('.sidenav');
     M.Sidenav.init(sideNav);
